Add redirect animation

--- a/index.html
+++ b/index.html
@@ -1,9 +1,63 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://shelvaaathithyanvk.wixstudio.com/myportfolio" />
-  </head>
-  <body>
-    <p>Redirecting...</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="refresh" content="3; url=https://shelvaaathithyanvk.wixstudio.com/myportfolio" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Redirecting...</title>
+  <style>
+    body {
+      background-color: #f4f4f4;
+      font-family: 'Segoe UI', sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      color: #333;
+    }
+
+    h1 {
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    .spinner {
+      margin: 20px;
+      width: 50px;
+      height: 50px;
+      border: 6px solid #ccc;
+      border-top-color: #0066ff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-10px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    p {
+      font-size: 1rem;
+      animation: fadeIn 2s ease-in-out 0.5s both;
+    }
+  </style>
+</head>
+<body>
+  <h1>Redirecting to my portfolio...</h1>
+  <div class="spinner"></div>
+  <p>If you're not redirected in 3 seconds, <a href="https://shelvaaathithyanvk.wixstudio.com/myportfolio">click here</a>.</p>
+</body>
 </html>
