--- a/index.html
+++ b/index.html
@@ -6,30 +6,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Redirecting...</title>
   <style>
+    :root {
+      --primary-color: #0066ff;
+      --bg-color: #f9f9f9;
+      --text-color: #333;
+    }
+
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
-      background-color: #f4f4f4;
+      background-color: var(--bg-color);
       font-family: 'Segoe UI', sans-serif;
+      color: var(--text-color);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      margin: 0;
-      color: #333;
+      padding: 2rem;
+      text-align: center;
     }
 
     h1 {
-      animation: fadeIn 2s ease-in-out;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
     .spinner {
-      margin: 20px;
-      width: 50px;
-      height: 50px;
-      border: 6px solid #ccc;
-      border-top-color: #0066ff;
+      margin: 1rem auto;
+      width: 40px;
+      height: 40px;
+      border: 4px solid #ccc;
+      border-top-color: var(--primary-color);
       border-radius: 50%;
       animation: spin 1s linear infinite;
+    }
+
+    p {
+      font-size: 1rem;
+      margin-top: 1rem;
+      animation: fadeIn 2s ease-in-out 0.5s both;
+    }
+
+    a {
+      color: var(--primary-color);
+      text-decoration: none;
+      font-weight: 500;
     }
 
     @keyframes spin {
@@ -41,7 +68,7 @@
     @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(-10px);
+        transform: translateY(10px);
       }
       to {
         opacity: 1;
@@ -49,9 +76,20 @@
       }
     }
 
-    p {
-      font-size: 1rem;
-      animation: fadeIn 2s ease-in-out 0.5s both;
+    @media (min-width: 768px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .spinner {
+        width: 50px;
+        height: 50px;
+        border-width: 6px;
+      }
+
+      p {
+        font-size: 1.1rem;
+      }
     }
   </style>
 </head>
